--- a/public/css/main.css
+++ b/public/css/main.css
@@ -890,6 +890,7 @@ h2.title {
  position:relative;
 }
 
+
 .product-overlay {
   background:#FE980F;
   top: 0;
@@ -902,12 +903,12 @@ h2.title {
   opacity:;
 }
 
-/* .single-products:hover .product-overlay {
+ /* .single-products:hover .product-overlay {
   display:block;
   height:100%;
 }
-
  */
+ 
 .product-overlay .overlay-content {
   bottom: 0;
   position: absolute;
@@ -916,7 +917,7 @@ h2.title {
   width: 100%;
 }
 
-.product-overlay .add-to-cart {
+ .product-overlay .add-to-cart {
   background:#fff;
   border: 0 none;
   border-radius: 0;
@@ -924,14 +925,13 @@ h2.title {
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
-}
+} 
 
-.product-overlay .add-to-cart:hover {
+/*.product-overlay .add-to-cart:hover {
   background:#fff;
   color: #FE980F;
 }
-
-
+*/
 .product-overlay p{
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
@@ -940,7 +940,17 @@ h2.title {
 }
 
 
-
+.qty {
+  
+  background:#F5F5ED;
+  border: 1;
+  border-radius: 0;
+  color: #696763;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  margin-bottom: 25px;
+  
+}
 .add-to-cart {
   background:#F5F5ED;
   border: 0 none;
