--- a/views/categoryItems.ejs
+++ b/views/categoryItems.ejs
@@ -23,8 +23,8 @@
                         <div class="product-image-wrapper">
                             <div class="single-products">
                                 <div class="productinfo text-center">
-                                    <img src="<%= items[i].imgUrl%>" alt="" />
-                                    <h2><%= items[i].salePrice%></h2>
+                                    <img src="<%= items[i].imgUrl%>" alt="" style="height: 237px;width: 256px;"/>
+                                    <h2>&#8377 <%= items[i].variants[0].salePrice%></h2>
                                     <p><%= items[i].name%></p>
                                     <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                                 </div>
