--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,8 +79,13 @@
                          
                         <div class="product-image-wrapper productinfo text-center">
                             <img src="images/horlicks4.png" alt="" />
-                            <h2>Rs 225</h2>
                             <p>Horlicks</p>
+                            <select class="variant">
+							  <option value="volvo">100g - 70 Rs</option>
+							  <option value="saab">200g - 135 Rs</option>
+							  <option value="opel">500g - 300 Rs</option>
+							  <option value="audi">800g - 500 Rs</option>
+							</select>
                             <input type="number"  class="btn btn-default add-to-cart"  title="Qty" min="1" max="100" value="1">
                             <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 
