copyright, price range rupee

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -86,7 +86,7 @@
 							  <option value="opel">500g - 300 Rs</option>
 							  <option value="audi">800g - 500 Rs</option>
 							</select>
-                            <input type="number"  class="btn btn-default add-to-cart"  title="Qty" min="1" max="100" value="1">
+                            <input type="number" placeholder="Qty"  class="btn btn-default add-to-cart"  title="Qty" min="1" max="100" >
                             <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 
                         </div>
