--- a/views/partials/left-sidebar.ejs
+++ b/views/partials/left-sidebar.ejs
@@ -125,8 +125,8 @@
     <div class="price-range"><!--price-range-->
         <h2>Price Range</h2>
         <div class="well text-center">
-            <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="600" data-slider-step="5" data-slider-value="[250,450]" id="sl2" ><br />
-            <b class="pull-left">$ 0</b> <b class="pull-right">$ 600</b>
+            <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="10000" data-slider-step="100" data-slider-value="[0,10000]" id="sl2" ><br />
+            <b class="pull-left">&#8377 0</b> <b class="pull-right">&#8377 10000</b>
         </div>
     </div><!--/price-range-->
 
