--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -29,7 +29,7 @@
                     </td>
                     <td class="cart_description">
                         <h4><a href=""><%= cart.items[i].name%></a></h4>
-                        <p>Web ID: 1089772</p>
+                        <p>Size: <%= cart.items[i].size%></p>
                     </td>
                     <td class="cart_price">
                         <p>&#8377 <%= cart.items[i].price %></p>
