--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -88,8 +88,8 @@
                         <ul class="nav navbar-nav">
                             <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
                             <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-                            <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                            <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                            <li><a href="/checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+                            <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                             <li><a href="/login"><i class="fa fa-lock"></i> Login</a></li>
                         </ul>
                     </div>
