--- a/public/css/main.css
+++ b/public/css/main.css
@@ -653,11 +653,18 @@ ul.sub-menu {
   right: 0;
 }
 
+.search-cat-brand {
+  border: 1px solid #F7F7F0;
+}
+
 .category-products {
   border: 1px solid #F7F7F0;
   margin-bottom: 35px;
   padding-bottom: 20px;
   padding-top: 15px;
+   height: 350px;
+    overflow-y: scroll;
+    overflow-x:hidden;
 }
 .left-sidebar h2, .brands_products h2 {
   color: #FE980F;
