login logout and other touch ups

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -54,6 +54,12 @@
                         <input type="text" placeholder="Name"/>
                         <input type="email" placeholder="Email Address"/>
                         <input type="password" placeholder="Password"/>
+                        <input type="password" placeholder="Confirm Password"/>
+                        <input type="number" placeholder="Phone No."/>
+                        <input type="text" placeholder="Door No and Street Address"/>
+                        <input type="text" placeholder="Area"/>
+                        <input type="text" placeholder="City"/>
+                        <input type="number" placeholder="zipcode"/>
                         <button type="submit" class="btn btn-default">Signup</button>
                     </form>
                 </div><!--/sign up form-->
