--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -86,11 +86,17 @@
                 <div class="col-sm-8">
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
+                            <% if(token){ %>
                             <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
-                            <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
+                           <% } %>
                             <li><a href="/checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a href="/login"><i class="fa fa-lock"></i> Login</a></li>
+                           <% if(token){ %>
+                            <li><a href="/logout"><i class="fa fa-lock"></i> Logout</a></li>
+                           <% }else{ %>
+                            <li><a href="/login"><i class="fa fa-lock"></i> Login/SignUp</a></li>
+                           <% }%>
+                           
                         </ul>
                     </div>
                 </div>
@@ -122,13 +128,6 @@
                                     <li><a href="/login">Login</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
-                                <ul role="menu" class="sub-menu">
-                                    <li><a href="blog.html">Blog List</a></li>
-                                    <li><a href="blog-single.html">Blog Single</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="404.html">404</a></li>
                             <li><a href="contact-us.html">Contact</a></li>
                         </ul>
                     </div>
