--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -87,7 +87,7 @@
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
                             <% if(token){ %>
-                            <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
+                            <li><a href="/profile"><i class="fa fa-user"></i> Account</a></li>
                            <% } %>
                             <li><a href="/checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
