--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1519,6 +1519,36 @@ h2.title {
 *******login page CSS******
 **************************/
 
+.error-heading h1{
+	color: #696763;
+    font-family: 'Roboto', sans-serif;
+    font-size: 32px;
+    font-weight: 300;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #eaeaec;
+    margin-left: 150px;
+}
+
+.error-message h2{
+	color: #696763;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    font-weight: 300;
+    padding-bottom: 20px;
+    margin-left: 150px;
+}
+
+.error-message h3{
+	color: #696763;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    padding-bottom: 20px;
+    margin-left: 150px;
+    margin-bottom: 50px;
+}
+
+
 #form {
   display: block;
   margin-bottom: 185px;
