--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,19 +32,15 @@
                 <div class="col-sm-6">
                     <div class="contactinfo">
                         <ul class="nav nav-pills">
-                            <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
-                            <li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li>
+                            <li><a href="#"><i class="fa fa-phone"></i> 9844324898</a></li>
+                            <li><a href="#"><i class="fa fa-envelope"></i> support@kartmonk.com</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                     <div class="social-icons pull-right">
                         <ul class="nav navbar-nav">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                            <li><marquee style="font-size:14px; margin-top: 5px"><i class="fa "></i> You have saved 230 Rs so far . Praise the Monk !! </marquee></li>
                         </ul>
                     </div>
                 </div>
@@ -90,7 +86,6 @@
                             <li><a href="/profile"><i class="fa fa-user"></i> Account</a></li>
                            <% } %>
                             <li><a href="/checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                            <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                            <% if(token){ %>
                             <li><a href="/logout"><i class="fa fa-lock"></i> Logout</a></li>
                            <% }else{ %>
