--- a/views/partials/left-sidebar.ejs
+++ b/views/partials/left-sidebar.ejs
@@ -75,7 +75,7 @@
         </div>
         <div id="chocolates" class="panel panel-default">
             <div class="panel-heading">
-                <h4 class="panel-title"><a href="/category/chocolates">Chocolates</a></h4>
+                <h4 class="panel-title"><a href="/category/chocolates/1">Chocolates</a></h4>
             </div>
         </div>
        <div id="shoes" class="panel panel-default">
@@ -153,17 +153,18 @@
         </div>
     </div><!--/brands_products-->
 
-    <div class="price-range"><!--price-range-->
+ <!--   <div class="price-range">
         <h2>Price Range</h2>
         <div class="well text-center">
             <input type="text" s value="" data-slider-min="0" data-slider-max="10000" data-slider-step="100" data-slider-value="[0,10000]" id="sl2" ><br />
             <b class="pull-left">&#8377 0</b> <b class="pull-right">&#8377 10000</b>
         </div>
-    </div><!--/price-range-->
+    </div>
 
-    <div class="shipping text-center"><!--shipping-->
+    <div class="shipping text-center">
         <img src="/images/home/shipping.jpg" alt="" />
-    </div><!--/shipping-->
+    </div>
+-->
 
 </div>
 <script>
