--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -43,7 +43,7 @@
 				        </div>
 				        <div id="userOrders" class="panel panel-default">
 				            <div class="panel-heading">
-				                <h4 class="panel-title"><a href="/profile">My Orders</a></h4>
+				                <h4 class="panel-title"><a href="/myOrders">My Orders</a></h4>
 				            </div>
 				        </div>
 				        
@@ -99,7 +99,7 @@
 		        <div class="edit-profile-form">
 		            <form method="post" action="/editProfile">
 		        
-		        		<input type="text" name="name" placeholder="Email Id    <%= user.name %>"/>
+		        		<input type="text" name="name" placeholder="Name   <%= user.name %>"/>
                         <input type="number" name="phone"  placeholder="Phone No. <%= user.phone %>"/>
                         <input type="text" name="streetAddress" placeholder="Door No and Street Address <%= user.streetAddress %>"/>
                         <input type="text" name="area" placeholder="Area  <%= user.area %>"/>
