--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,6 +66,12 @@ a#scrollUp i{
 /*************************
 *******Header CSS******
 **************************/
+.header-home {
+	 background: #FE980F;
+	 font-family: 'Roboto', sans-serif;
+	 font-weight:400px;
+	 
+}
 
 .header_top {
   background: none repeat scroll 0 0 #F0F0E9;
@@ -142,6 +148,7 @@ a#scrollUp i{
   margin-right: 0;
   padding-bottom: 20px;
   padding-top: 20px;
+  margin-bottom: 20px
 }
 
 .header-middle .container .row .col-sm-4{
@@ -598,8 +605,8 @@ ul.sub-menu {
 .item h1 {
   color: #B4B1AB;
   font-family: abel;
-  font-size: 48px;
-  margin-top: 115px;
+  font-size: 38px;
+  margin-top: 85px;
 }
 
 .item h1 span {
@@ -609,15 +616,15 @@ ul.sub-menu {
 .item h2 {
   color: #363432;
   font-family: 'Roboto', sans-serif;
-  font-size: 28px;
-  font-weight: 700;
-  margin-bottom: 22px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 16px;
   margin-top: 10px;
 }
 
 .item  p {
 	color:#363432;
-	font-size:16px;
+	font-size:14px;
 	font-weight:300;
 	font-family: 'Roboto', sans-serif;
 }
@@ -641,7 +648,7 @@ ul.sub-menu {
 .control-carousel {
   position: absolute;
   top: 50%;
-  font-size: 60px;
+  font-size: 40px;
   color: #C2C2C1;
 }
 
@@ -655,6 +662,63 @@ ul.sub-menu {
 
 .search-cat-brand {
   border: 1px solid #F7F7F0;
+}
+
+.my-order-container-main {
+  margin-top: 30px;
+  margin-left : 0px;
+  padding-bottom: 5px;
+  padding-top: 0px;
+  
+}
+.my-order-container {
+	border: 2px solid #F7F7F0;
+	margin-bottom: 15px;
+  
+}
+
+
+.my-order-status {
+	color: #FE980F;
+    font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 5px;
+}
+.my-order-order-titles {
+	color: #697071;
+    font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    font-weight: 200;
+    margin-top: 5px;
+}
+.my-order-order-titles-with-border {
+	color: #697071;
+    font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    font-weight: 200;
+    border-bottom: 1px solid #eaeaec;
+    padding-bottom: 10px;
+    margin-top: 5px;
+}
+
+.order-items-div {
+	
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height : 100px;
+    overflow-y: scroll;
+    overflow-x:hidden;
+}
+.order-items-div ul{
+	
+}
+.order-items {
+	color: #696763;
+    font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+    margin-bottom: 10px;
 }
 
 .user-info-container {
@@ -673,7 +737,7 @@ ul.sub-menu {
 }
 .user-info-container h2{
 	color: #696763;
-    font-family: 'Roboto', sans-serif;
+    font-family: Whitney,DIN,Helvetica,Arial,sans-serif
     font-size: 26px;
     font-weight: 300;
     padding-bottom: 20px;
@@ -682,7 +746,7 @@ ul.sub-menu {
 .user-table-content {
 	
 	color: #696763;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Whitney,DIN,Helvetica,Arial,sans-serif
     font-size: 17px;
     font-weight: 300;
     margin-top: 20px;
@@ -697,7 +761,7 @@ ul.sub-menu {
   border: medium none;
   color: #696763;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  font-family: Whitney,DIN,Helvetica,Arial,sans-serif
   font-size: 14px;
   font-weight: 300;
   height: 40px;
@@ -712,7 +776,7 @@ ul.sub-menu {
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  font-family: Whitney,DIN,Helvetica,Arial,sans-serif
   font-size: 16px;
   font-weight: 300;
   margin-left : 35px;
@@ -901,6 +965,7 @@ h2.title:before{
 
 .features_items{
 	overflow:hidden;
+	margin-top: 20px;
 }
 
 
@@ -933,9 +998,12 @@ h2.title {
 
 .productinfo h2{
 	color: #FE980F;
-	font-family: 'Roboto', sans-serif;
-	font-size: 24px;
-	font-weight: 700;
+	font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
+	font-size: 22px;
+	font-weight: 500;
+	display: -webkit-inline-box;
+    margin-right: 7px;
+    margin-left: 7px;
 }
 .product-overlay h2{
 	color: #fff;
@@ -946,7 +1014,7 @@ h2.title {
 
 
 .productinfo p{
-  font-family: 'Roboto', sans-serif;
+  font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #696763;
@@ -1015,7 +1083,7 @@ h2.title {
   border: 1;
   border-radius: 0;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
   width: 180px;
@@ -1028,7 +1096,7 @@ h2.title {
   border: 1;
   border-radius: 0;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
   margin-top: 30px;
@@ -1039,7 +1107,7 @@ h2.title {
   border: 0 none;
   border-radius: 0;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: Whitney,DIN,Helvetica,Arial,sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
   margin-top: 40px;
@@ -1290,7 +1358,7 @@ h2.title {
 
 #similar-product .carousel-inner .item img {
   display: inline-block;
-  margin-left: 15px;
+  margin-left: 5px;
 }
 
 .item-control {
@@ -1551,8 +1619,8 @@ h2.title {
 
 #form {
   display: block;
-  margin-bottom: 185px;
-  margin-top: 5px;
+  margin-bottom: 50px;
+  margin-top: 30px;
   overflow: hidden;
 }
 
