--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,8 +40,11 @@
                 <div class="col-sm-5">
                     <div class="social-icons pull-right">
                         <ul class="nav navbar-nav">
-                            <li><marquee style="font-size:14px; margin-top: 5px"><i class="fa "></i> You have saved 230 Rs so far . Praise the Monk !! </marquee></li>
-                        </ul>
+                        <% if(token && welcomeTip && welcomeTip != 'undefined'){ %>
+                            <li><marquee style="font-size:14px; margin-top: 5px"><i class="fa "></i> <%=welcomeTip%> </marquee></li>
+                       	<% } %>
+                            
+                          </ul>
                     </div>
                 </div>
             </div>
@@ -55,33 +58,18 @@
                     <div class="logo pull-left">
                         <a href="/home"><img src="/images/home/logo.png" alt="" /></a>
                     </div>
-                    <div class="btn-group pull-right">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                USA
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">UK</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                DOLLAR
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Canadian Dollar</a></li>
-                                <li><a href="#">Pound</a></li>
-                            </ul>
-                        </div>
+                </div>
+                
+                <div class="col-sm-3">
+                    <div class="search_box pull-right">
+                        <input type="text" placeholder="Search"/>
                     </div>
                 </div>
-                <div class="col-sm-8">
+                
+                <div class="col-sm-4">
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
+                        	<li><a href="/home" class="header-home"> Home</a></li>
                             <% if(token){ %>
                             <li><a href="/profile"><i class="fa fa-user"></i> Account</a></li>
                            <% } %>
@@ -99,40 +87,5 @@
         </div>
     </div><!--/header-middle-->
 
-    <div class="header-bottom"><!--header-bottom-->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-9">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="mainmenu pull-left">
-                        <ul class="nav navbar-nav collapse navbar-collapse">
-                            <li><a href="/home" class="active">Home</a></li>
-                            <li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
-                                <ul role="menu" class="sub-menu">
-                                    <li><a href="shop.html">Products</a></li>
-                                    <li><a href="product-details.html">Product Details</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="cart.html">Cart</a></li>
-                                    <li><a href="/login">Login</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="contact-us.html">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="search_box pull-right">
-                        <input type="text" placeholder="Search"/>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div><!--/header-bottom-->
+  
 </header><!--/header-->
